--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -10,10 +10,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "babel-preset-expo": "^9.1.0",
     "base-64": "^1.0.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
@@ -28,7 +31,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
