--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -10,8 +10,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/plugin-syntax-import-assertions": "^7.18.6",
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -20,12 +21,14 @@
     "babel-preset-expo": "^9.1.0",
     "base-64": "^1.0.0",
     "expo": "~45.0.0",
+    "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-picker": "^4.8.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
