--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -26,7 +26,7 @@
     "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "^0.68.2",
     "react-native-device-info": "^10.0.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-image-picker": "^4.8.4",
@@ -34,10 +34,12 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
-    "start": "^5.1.0"
+    "start": "^5.1.0",
+    "swiper": "^8.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
