--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.2.1",
     "babel-preset-expo": "^9.1.0",
     "base-64": "^1.0.0",
+    "dotenv": "^16.4.5",
     "expo": "~45.0.0",
     "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
